src/objects/Office_Form__c.object
<CustomObject>
    <fields>
        <fullName>Forms_Category__c</fullName>
        <label>Forms Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Release Forms</fullName>
                </value>
                <value>
                    <fullName>Surgical Consent</fullName>
                </value>
                <value>
                    <fullName>Prosth Consent</fullName>
                </value>
                <value>
                    <fullName>Post OP Instruction</fullName>
                </value>
                <value>
                    <fullName>Phased Forms</fullName>
                </value>
                <value>
                    <fullName>Treatment Completion</fullName>
                </value>
                <value>
                    <fullName>Surgical Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isRemovable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRemovable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUpload</label>
        <type>Checkbox</type>
    </fields>
    <label>Office Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Office Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>